13981
This fails in both 2.7.2.final and 2.7.3.final:
```scala
Scala compiler version 2.7.3.final -- Copyright 2002-2009, LAMP/EPFL
// Java source
interface I { enum E {E1} }
class J1 implements I { void foo(E e) { } }
class J2 extends J1 { void foo( E e ) { } }
// Scala source
object S { new J2 { } }

javac *.java
// Java compilation succeeded!
rm -f *.class
scalac *.scala *.java
J2.java:1: error: not found: type E
class J2 extends J1 { void foo( E e ) { } }
                                ^
one error found
gnumake: *** [test] Error 1
```

I haven't been able to construct a test case involving fewer than three source files. The attachment is a zip file containing a Makefile and the three source files.
